# Test-task-Junior-Backend

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini
backend/config/: settings.py  urls.py
backend/core/: apps.py  clients.py  models.py  serializers.py  services.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
backend/core/tests/: conftest.py  test_comments.py
